application/tekton/trigger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-github-listener
  annotations:
    "external-dns.alpha.kubernetes.io/hostname": "tekton-webhook.ediri.online"
    "external-dns.alpha.kubernetes.io/ttl": "60"
spec:
  rules:
    - host: github.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: el-github-listener
                port:
                  number: 8080
